--- a/languages/plugin-update-checker-sl_SI.po
+++ b/languages/plugin-update-checker-sl_SI.po
@@ -1,49 +1,48 @@
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: plugin-update-checker\n"
 "POT-Creation-Date: 2017-11-24 17:02+0200\n"
-"PO-Revision-Date: 2016-01-10 20:59+0100\n"
-"Last-Translator: Tamás András Horváth <htomy92@gmail.com>\n"
+"PO-Revision-Date: 2018-10-27 20:36+0200\n"
 "Language-Team: \n"
-"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.4\n"
+"X-Generator: Poedit 2.2\n"
 "X-Poedit-Basepath: ..\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100>=3 && n%100<=4 ? 2 : 3);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_x:1,2c;_x\n"
+"Last-Translator: Igor Funa\n"
+"Language: sl_SI\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: Puc/v4p3/Plugin/UpdateChecker.php:395
 msgid "Check for updates"
-msgstr ""
+msgstr "Preveri posodobitve"
 
 #: Puc/v4p3/Plugin/UpdateChecker.php:548
 #, php-format
 msgctxt "the plugin title"
 msgid "The %s plugin is up to date."
-msgstr ""
+msgstr "Vtičnik %s je že posodobljen."
 
 #: Puc/v4p3/Plugin/UpdateChecker.php:550
 #, php-format
 msgctxt "the plugin title"
 msgid "A new version of the %s plugin is available."
-msgstr ""
+msgstr "Nova različica vtičnika %s je na razpolago."
 
 #: Puc/v4p3/Plugin/UpdateChecker.php:552
 #, php-format
 msgctxt "the plugin title"
 msgid "Could not determine if updates are available for %s."
-msgstr ""
+msgstr "Ne morem ugotoviti če se za vtičnik %s na razpolago posodobitve."
 
 #: Puc/v4p3/Plugin/UpdateChecker.php:558
 #, php-format
 msgid "Unknown update checker status \"%s\""
-msgstr ""
+msgstr "Neznan status preverjanja posodobitev za \"%s\""
 
 #: Puc/v4p3/Vcs/PluginUpdateChecker.php:95
 msgid "There is no changelog available."
-msgstr ""
+msgstr "Dnevnik sprememb ni na razpolago."
